--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="css/style.css">
+  <title>Delivery Food - доставка еды на дом.</title>
 </head>
 <body>
-  
+  <div class="container">
+    <header class="header">
+      <img src="img\logo.svg" alt="Тут должен был быть логотип" class="logo">
+      <input type="text" class="input search-input" placeholder="Адрес доставки">
+      <div class="buttons">
+        <button class="button">Войти</button>
+        <button class="button">Корзина</button>
+      </div>
+    </header>
+  </div>
 </body>
 </html>
