--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
   <title>Delivery Food - доставка еды на дом.</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -24,6 +26,15 @@
         </button>
       </div>
     </header>
+    <section class="promo">
+      <h1 class="promo-title">Онлайн-сервис <br />доставки еды на дом</h1>
+      <p class="promo-text">Блюда из любимого ресторана привезет курьер в перчатках, маске и с антисептиком</p>
+    </section>
+    <section class="restaurants">
+      <div class="section-heading">
+        <h2 class="section-titel">Рестораны</h2>
+      </div>
+    </section>
   </div>
 </body>
 
