--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <header class="header">
       <img src="img\logo.svg" alt="Тут должен был быть логотип" class="logo">
-      <input type="text" class="input search-input" placeholder="Адрес доставки">
+      <input type="text" class="input input-adress" placeholder="Адрес доставки">
       <div class="buttons">
         <button class="button button-primary">
           <img src="img/user.svg" alt="icon" class="button-icon">
@@ -33,6 +33,7 @@
     <section class="restaurants">
       <div class="section-heading">
         <h2 class="section-titel">Рестораны</h2>
+        <input type="text" class="input-search" placeholder="Поиск блюд и ресторанов">
       </div>
     </section>
   </div>
