--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <header class="header">
       <img src="img\logo.svg" alt="Тут должен был быть логотип" class="logo">
-      <input type="text" class="input input-adress" placeholder="Адрес доставки">
+      <input type="text" class="input input-address" placeholder="Адрес доставки">
       <div class="buttons">
         <button class="button button-primary">
           <img src="img/user.svg" alt="icon" class="button-icon">
