--- a/index.html
+++ b/index.html
@@ -33,8 +33,119 @@
     <section class="restaurants">
       <div class="section-heading">
         <h2 class="section-titel">Рестораны</h2>
-        <input type="text" class="input-search" placeholder="Поиск блюд и ресторанов">
+        <input type="text" class="input input-search" placeholder="Поиск блюд и ресторанов">
       </div>
+      <div class="cards">
+        <div class="card">
+          <img src="img/image.jpg" alt="image" class="card-image" />
+          <div class="card-text">
+            <div class="card-heading">
+              <h3 class="card-title">Пицца плюс</h3>
+              <span class="tag card-tag">50 мин</span>
+            </div>
+            <!-- /.card-heading -->
+            <div class="card-info">
+              <div class="rating"><img src="img/rating.svg" alt="rating" class="rating-star" />4.5</div>
+              <div class="price">От 900 ₽</div>
+              <div class="category">Пицца</div>
+            </div>
+            <!-- /.card-info -->
+          </div>
+          <!-- /.card-text -->
+        </div>
+        <!-- /.card -->
+        <div class="card">
+          <img src="img/image.jpg" alt="image" class="card-image" />
+          <div class="card-text">
+            <div class="card-heading">
+              <h3 class="card-title">Пицца плюс</h3>
+              <span class="tag card-tag">50 мин</span>
+            </div>
+            <!-- /.card-heading -->
+            <div class="card-info">
+              <div class="rating"><img src="img/rating.svg" alt="rating" class="rating-star" />4.5</div>
+              <div class="price">От 900 ₽</div>
+              <div class="category">Пицца</div>
+            </div>
+            <!-- /.card-info -->
+          </div>
+          <!-- /.card-text -->
+        </div>
+        <!-- /.card -->
+        <div class="card">
+          <img src="img/image.jpg" alt="image" class="card-image" />
+          <div class="card-text">
+            <div class="card-heading">
+              <h3 class="card-title">Пицца плюс</h3>
+              <span class="tag card-tag">50 мин</span>
+            </div>
+            <!-- /.card-heading -->
+            <div class="card-info">
+              <div class="rating"><img src="img/rating.svg" alt="rating" class="rating-star" />4.5</div>
+              <div class="price">От 900 ₽</div>
+              <div class="category">Пицца</div>
+            </div>
+            <!-- /.card-info -->
+          </div>
+          <!-- /.card-text -->
+        </div>
+        <!-- /.card -->
+        <div class="card">
+          <img src="img/image.jpg" alt="image" class="card-image" />
+          <div class="card-text">
+            <div class="card-heading">
+              <h3 class="card-title">Пицца плюс</h3>
+              <span class="tag card-tag">50 мин</span>
+            </div>
+            <!-- /.card-heading -->
+            <div class="card-info">
+              <div class="rating"><img src="img/rating.svg" alt="rating" class="rating-star" />4.5</div>
+              <div class="price">От 900 ₽</div>
+              <div class="category">Пицца</div>
+            </div>
+            <!-- /.card-info -->
+          </div>
+          <!-- /.card-text -->
+        </div>
+        <!-- /.card -->
+        <div class="card">
+          <img src="img/image.jpg" alt="image" class="card-image" />
+          <div class="card-text">
+            <div class="card-heading">
+              <h3 class="card-title">Пицца плюс</h3>
+              <span class="tag card-tag">50 мин</span>
+            </div>
+            <!-- /.card-heading -->
+            <div class="card-info">
+              <div class="rating"><img src="img/rating.svg" alt="rating" class="rating-star" />4.5</div>
+              <div class="price">От 900 ₽</div>
+              <div class="category">Пицца</div>
+            </div>
+            <!-- /.card-info -->
+          </div>
+          <!-- /.card-text -->
+        </div>
+        <!-- /.card -->
+        <div class="card">
+          <img src="img/image.jpg" alt="image" class="card-image" />
+          <div class="card-text">
+            <div class="card-heading">
+              <h3 class="card-title">Пицца плюс</h3>
+              <span class="tag card-tag">50 мин</span>
+            </div>
+            <!-- /.card-heading -->
+            <div class="card-info">
+              <div class="rating"><img src="img/rating.svg" alt="rating" class="rating-star" />4.5</div>
+              <div class="price">От 900 ₽</div>
+              <div class="category">Пицца</div>
+            </div>
+            <!-- /.card-info -->
+          </div>
+          <!-- /.card-text -->
+        </div>
+        <!-- /.card -->
+      </div>
+      <!-- /.cards -->
     </section>
   </div>
 </body>
