--- a/index.html
+++ b/index.html
@@ -35,17 +35,72 @@
         <h2 class="section-titel">Рестораны</h2>
         <input type="text" class="input input-search" placeholder="Поиск блюд и ресторанов">
       </div>
+      <!-- .cards -->
       <div class="cards">
         <div class="card">
           <img src="img/image.jpg" alt="image" class="card-image" />
           <div class="card-text">
             <div class="card-heading">
               <h3 class="card-title">Пицца плюс</h3>
-              <span class="tag card-tag">50 мин</span>
+              <span class="tag card-tag">30 мин</span>
+            </div>
+            <!-- /.card-heading -->
+            <div class="card-info">
+              <div class="rating"><img src="img/rating.svg" alt="rating" class="rating-star" />4.6</div>
+              <div class="price">От 700 ₽</div>
+              <div class="category">Пицца</div>
+            </div>
+            <!-- /.card-info -->
+          </div>
+          <!-- /.card-text -->
+        </div>
+        <!-- /.card -->
+        <div class="card">
+          <img src="img/image2.jpg" alt="image" class="card-image" />
+          <div class="card-text">
+            <div class="card-heading">
+              <h3 class="card-title">Тануки </h3>
+              <span class="tag card-tag">40 мин</span>
             </div>
             <!-- /.card-heading -->
             <div class="card-info">
               <div class="rating"><img src="img/rating.svg" alt="rating" class="rating-star" />4.5</div>
+              <div class="price">От 700 ₽</div>
+              <div class="category">Пицца</div>
+            </div>
+            <!-- /.card-info -->
+          </div>
+          <!-- /.card-text -->
+        </div>
+        <!-- /.card -->
+        <div class="card">
+          <img src="img/image3.jpg" alt="image" class="card-image" />
+          <div class="card-text">
+            <div class="card-heading">
+              <h3 class="card-title">FoodBand</h3>
+              <span class="tag card-tag">50 мин</span>
+            </div>
+            <!-- /.card-heading -->
+            <div class="card-info">
+              <div class="rating"><img src="img/rating.svg" alt="rating" class="rating-star" />4.3</div>
+              <div class="price">От 500 ₽</div>
+              <div class="category">Пицца</div>
+            </div>
+            <!-- /.card-info -->
+          </div>
+          <!-- /.card-text -->
+        </div>
+        <!-- /.card -->
+        <div class="card">
+          <img src="img/image4.jpg" alt="image" class="card-image" />
+          <div class="card-text">
+            <div class="card-heading">
+              <h3 class="card-title">Жадина-пицца</h3>
+              <span class="tag card-tag">45 мин</span>
+            </div>
+            <!-- /.card-heading -->
+            <div class="card-info">
+              <div class="rating"><img src="img/rating.svg" alt="rating" class="rating-star" />4.1</div>
               <div class="price">От 900 ₽</div>
               <div class="category">Пицца</div>
             </div>
@@ -55,16 +110,16 @@
         </div>
         <!-- /.card -->
         <div class="card">
-          <img src="img/image.jpg" alt="image" class="card-image" />
+          <img src="img/image5.jpg" alt="image" class="card-image" />
           <div class="card-text">
             <div class="card-heading">
-              <h3 class="card-title">Пицца плюс</h3>
-              <span class="tag card-tag">50 мин</span>
+              <h3 class="card-title">Точка еды</h3>
+              <span class="tag card-tag">90 мин</span>
             </div>
             <!-- /.card-heading -->
             <div class="card-info">
-              <div class="rating"><img src="img/rating.svg" alt="rating" class="rating-star" />4.5</div>
-              <div class="price">От 900 ₽</div>
+              <div class="rating"><img src="img/rating.svg" alt="rating" class="rating-star" />3.5</div>
+              <div class="price">От 950 ₽</div>
               <div class="category">Пицца</div>
             </div>
             <!-- /.card-info -->
@@ -73,64 +128,10 @@
         </div>
         <!-- /.card -->
         <div class="card">
-          <img src="img/image.jpg" alt="image" class="card-image" />
+          <img src="img/image6.jpg" alt="image" class="card-image" />
           <div class="card-text">
             <div class="card-heading">
-              <h3 class="card-title">Пицца плюс</h3>
-              <span class="tag card-tag">50 мин</span>
-            </div>
-            <!-- /.card-heading -->
-            <div class="card-info">
-              <div class="rating"><img src="img/rating.svg" alt="rating" class="rating-star" />4.5</div>
-              <div class="price">От 900 ₽</div>
-              <div class="category">Пицца</div>
-            </div>
-            <!-- /.card-info -->
-          </div>
-          <!-- /.card-text -->
-        </div>
-        <!-- /.card -->
-        <div class="card">
-          <img src="img/image.jpg" alt="image" class="card-image" />
-          <div class="card-text">
-            <div class="card-heading">
-              <h3 class="card-title">Пицца плюс</h3>
-              <span class="tag card-tag">50 мин</span>
-            </div>
-            <!-- /.card-heading -->
-            <div class="card-info">
-              <div class="rating"><img src="img/rating.svg" alt="rating" class="rating-star" />4.5</div>
-              <div class="price">От 900 ₽</div>
-              <div class="category">Пицца</div>
-            </div>
-            <!-- /.card-info -->
-          </div>
-          <!-- /.card-text -->
-        </div>
-        <!-- /.card -->
-        <div class="card">
-          <img src="img/image.jpg" alt="image" class="card-image" />
-          <div class="card-text">
-            <div class="card-heading">
-              <h3 class="card-title">Пицца плюс</h3>
-              <span class="tag card-tag">50 мин</span>
-            </div>
-            <!-- /.card-heading -->
-            <div class="card-info">
-              <div class="rating"><img src="img/rating.svg" alt="rating" class="rating-star" />4.5</div>
-              <div class="price">От 900 ₽</div>
-              <div class="category">Пицца</div>
-            </div>
-            <!-- /.card-info -->
-          </div>
-          <!-- /.card-text -->
-        </div>
-        <!-- /.card -->
-        <div class="card">
-          <img src="img/image.jpg" alt="image" class="card-image" />
-          <div class="card-text">
-            <div class="card-heading">
-              <h3 class="card-title">Пицца плюс</h3>
+              <h3 class="card-title">PizzaBurger</h3>
               <span class="tag card-tag">50 мин</span>
             </div>
             <!-- /.card-heading -->
