--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="container">
     <header class="header">
-      <img src="img\logo.svg" alt="Тут должен был быть логотип" class="logo">
+      <a href="index.html" class="logo"><img src="img\logo.svg" alt="Тут должен был быть логотип" ></a> 
       <input type="text" class="input input-address" placeholder="Адрес доставки">
       <div class="buttons">
         <button class="button button-primary">
@@ -42,7 +42,7 @@
         </div>
         <!-- .cards -->
         <div class="cards">
-          <div class="card">
+          <a href="restaraunt.html" class="card">
             <img src="img/image.jpg" alt="image" class="card-image" />
             <div class="card-text">
               <div class="card-heading">
@@ -58,9 +58,9 @@
               <!-- /.card-info -->
             </div>
             <!-- /.card-text -->
-          </div>
+          </a>
           <!-- /.card -->
-          <div class="card">
+          <a href="restaraunt.html" class="card">
             <img src="img/image2.jpg" alt="image" class="card-image" />
             <div class="card-text">
               <div class="card-heading">
@@ -76,9 +76,9 @@
               <!-- /.card-info -->
             </div>
             <!-- /.card-text -->
-          </div>
+          </a>
           <!-- /.card -->
-          <div class="card">
+          <a href="restaraunt.html" class="card">
             <img src="img/image3.jpg" alt="image" class="card-image" />
             <div class="card-text">
               <div class="card-heading">
@@ -94,9 +94,9 @@
               <!-- /.card-info -->
             </div>
             <!-- /.card-text -->
-          </div>
+          </a>
           <!-- /.card -->
-          <div class="card">
+          <a href="restaraunt.html" class="card">
             <img src="img/image4.jpg" alt="image" class="card-image" />
             <div class="card-text">
               <div class="card-heading">
@@ -112,9 +112,9 @@
               <!-- /.card-info -->
             </div>
             <!-- /.card-text -->
-          </div>
+          </a>
           <!-- /.card -->
-          <div class="card">
+          <a href="restaraunt.html" class="card">
             <img src="img/image5.jpg" alt="image" class="card-image" />
             <div class="card-text">
               <div class="card-heading">
@@ -130,9 +130,9 @@
               <!-- /.card-info -->
             </div>
             <!-- /.card-text -->
-          </div>
+          </a>
           <!-- /.card -->
-          <div class="card">
+          <a href="restaraunt.html" class="card">
             <img src="img/image6.jpg" alt="image" class="card-image" />
             <div class="card-text">
               <div class="card-heading">
@@ -148,7 +148,7 @@
               <!-- /.card-info -->
             </div>
             <!-- /.card-text -->
-          </div>
+          </a>
           <!-- /.card -->
         </div>
         <!-- /.cards -->
