--- a/restaraunt.html
+++ b/restaraunt.html
@@ -20,7 +20,7 @@
           <img src="img/user.svg" alt="icon" class="button-icon">
           <span class="button-text">Войти</span>
         </button>
-        <button class="button">
+        <button class="button" id="cart-button">
           <img src="img/shopping-cart.svg" alt="icon" class="button-icon">
           <span class="button-text">Корзина</span>
         </button>
