--- a/restaraunt.html
+++ b/restaraunt.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Тануки - доставка еды на дом.</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -44,7 +45,7 @@
         </div>
         <!-- .cards -->
         <div class="cards">
-          <div class="card">
+          <div class="card wow fadeInUp" date-wow-delay="0.2s">
             <img src="img/roll-ugor.jpg" alt="image" class="card-image" />
             <div class="card-text">
               <div class="card-heading">
@@ -67,7 +68,7 @@
             <!-- /.card-text -->
           </div>
           <!-- /.card -->
-          <div class="card">
+          <div class="card wow fadeInUp" date-wow-delay="0.4s">
             <img src="img/calofornia.jpg" alt="image" class="card-image" />
             <div class="card-text">
               <div class="card-heading">
@@ -90,7 +91,7 @@
             <!-- /.card-text -->
           </div>
           <!-- /.card -->
-          <div class="card">
+          <div class="card wow fadeInUp" date-wow-delay="0.6s">
             <img src="img/okinava.jpg" alt="image" class="card-image" />
             <div class="card-text">
               <div class="card-heading">
@@ -113,7 +114,7 @@
             <!-- /.card-text -->
           </div>
           <!-- /.card -->
-          <div class="card">
+          <div class="card wow fadeInUp" date-wow-delay="0.2s">
             <img src="img/cezar.jpg" alt="image" class="card-image" />
             <div class="card-text">
               <div class="card-heading">
@@ -136,7 +137,7 @@
             <!-- /.card-text -->
           </div>
           <!-- /.card -->
-          <div class="card">
+          <div class="card wow fadeInUp" date-wow-delay="0.4s">
             <img src="img/yasai.jpg" alt="image" class="card-image" />
             <div class="card-text">
               <div class="card-heading">
@@ -159,7 +160,7 @@
             <!-- /.card-text -->
           </div>
           <!-- /.card -->
-          <div class="card">
+          <div class="card wow fadeInUp" date-wow-delay="0.6s">
             <img src="img/roll-krevet.jpg" alt="image" class="card-image" />
             <div class="card-text">
               <div class="card-heading">
@@ -285,6 +286,7 @@
     </div>
     <!-- /.modal-dialog -->
   </div>
+  <script src="js/wow.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 
