--- a/restaraunt.html
+++ b/restaraunt.html
@@ -45,7 +45,7 @@
         </div>
         <!-- .cards -->
         <div class="cards">
-          <div class="card wow fadeInUp" date-wow-delay="0.2s">
+          <div class="card wow fadeInUp" data-wow-delay="0.2s">
             <img src="img/roll-ugor.jpg" alt="image" class="card-image" />
             <div class="card-text">
               <div class="card-heading">
@@ -68,7 +68,7 @@
             <!-- /.card-text -->
           </div>
           <!-- /.card -->
-          <div class="card wow fadeInUp" date-wow-delay="0.4s">
+          <div class="card wow fadeInUp" data-wow-delay="0.4s">
             <img src="img/calofornia.jpg" alt="image" class="card-image" />
             <div class="card-text">
               <div class="card-heading">
@@ -91,7 +91,7 @@
             <!-- /.card-text -->
           </div>
           <!-- /.card -->
-          <div class="card wow fadeInUp" date-wow-delay="0.6s">
+          <div class="card wow fadeInUp" data-wow-delay="0.6s">
             <img src="img/okinava.jpg" alt="image" class="card-image" />
             <div class="card-text">
               <div class="card-heading">
@@ -114,7 +114,7 @@
             <!-- /.card-text -->
           </div>
           <!-- /.card -->
-          <div class="card wow fadeInUp" date-wow-delay="0.2s">
+          <div class="card wow fadeInUp" data-wow-delay="0.2s">
             <img src="img/cezar.jpg" alt="image" class="card-image" />
             <div class="card-text">
               <div class="card-heading">
@@ -137,7 +137,7 @@
             <!-- /.card-text -->
           </div>
           <!-- /.card -->
-          <div class="card wow fadeInUp" date-wow-delay="0.4s">
+          <div class="card wow fadeInUp" data-wow-delay="0.4s">
             <img src="img/yasai.jpg" alt="image" class="card-image" />
             <div class="card-text">
               <div class="card-heading">
@@ -160,7 +160,7 @@
             <!-- /.card-text -->
           </div>
           <!-- /.card -->
-          <div class="card wow fadeInUp" date-wow-delay="0.6s">
+          <div class="card wow fadeInUp" data-wow-delay="0.6s">
             <img src="img/roll-krevet.jpg" alt="image" class="card-image" />
             <div class="card-text">
               <div class="card-heading">
