--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!-- /.container -->
   <main class="main">
     <div class="container">
-      <section class="promo">
+      <section class="promo wow fadeInLeft">
         <h1 class="promo-title">Онлайн-сервис <br />доставки еды на дом</h1>
         <p class="promo-text">Блюда из любимого ресторана привезет курьер в перчатках, маске и с антисептиком</p>
       </section>
@@ -43,7 +43,7 @@
         </div>
         <!-- .cards -->
         <div class="cards">
-          <a href="restaraunt.html" class="card">
+          <a href="restaraunt.html" class="card wow fadeInUp" data-wow-delay="0.2s">
             <img src="img/image.jpg" alt="image" class="card-image" />
             <div class="card-text">
               <div class="card-heading">
@@ -61,7 +61,7 @@
             <!-- /.card-text -->
           </a>
           <!-- /.card -->
-          <a href="restaraunt.html" class="card">
+          <a href="restaraunt.html" class="card wow fadeInUp" data-wow-delay="0.4s">
             <img src="img/image2.jpg" alt="image" class="card-image" />
             <div class="card-text">
               <div class="card-heading">
@@ -79,7 +79,7 @@
             <!-- /.card-text -->
           </a>
           <!-- /.card -->
-          <a href="restaraunt.html" class="card">
+          <a href="restaraunt.html" class="card wow fadeInUp" data-wow-delay="0.6s">
             <img src="img/image3.jpg" alt="image" class="card-image" />
             <div class="card-text">
               <div class="card-heading">
@@ -97,7 +97,7 @@
             <!-- /.card-text -->
           </a>
           <!-- /.card -->
-          <a href="restaraunt.html" class="card">
+          <a href="restaraunt.html" class="card wow fadeInUp" data-wow-delay="0.2s">
             <img src="img/image4.jpg" alt="image" class="card-image" />
             <div class="card-text">
               <div class="card-heading">
@@ -115,7 +115,7 @@
             <!-- /.card-text -->
           </a>
           <!-- /.card -->
-          <a href="restaraunt.html" class="card">
+          <a href="restaraunt.html" class="card wow fadeInUp" data-wow-delay="0.4s">
             <img src="img/image5.jpg" alt="image" class="card-image" />
             <div class="card-text">
               <div class="card-heading">
@@ -133,7 +133,7 @@
             <!-- /.card-text -->
           </a>
           <!-- /.card -->
-          <a href="restaraunt.html" class="card">
+          <a href="restaraunt.html" class="card wow fadeInUp" data-wow-delay="0.6s">
             <img src="img/image6.jpg" alt="image" class="card-image" />
             <div class="card-text">
               <div class="card-heading">
